--- a/index.html
+++ b/index.html
@@ -200,6 +200,15 @@
         .sell-btn:hover {
             background-color: #2980b9;
         }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 1.5rem;
+            background-color: var(--dark);
+            color: white;
+            margin-top: 3rem;
+        }
         
         /* Shopping Cart */
         .cart-container {
