--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alteix</title>
+    <title>TeixStore</title>
     <style>
         :root {
             --primary: #2c3e50;
@@ -434,7 +434,7 @@
                 title: "Dragonfly",
                 description: "No Mutation",
                 price: 55000,
-                image: "https://static.wikia.nocookie.net/growagarden/images/c/c9/DragonflyIcon.png/revision/latest/scale-to-width-down/1000?cb=20250603072107",
+                image: "https://i.imgur.com/rZPcSA1.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg"
             },
             {
@@ -442,15 +442,15 @@
                 title: "Dragonfly",
                 description: "Shiny",
                 price: 55000,
-                image: "https://static.wikia.nocookie.net/growagarden/images/8/8d/Dragonfly_Shiny.png/revision/latest?cb=20250712194336",
+                image: "https://i.imgur.com/CVweE3Y.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg"
             },
             {
                 id: 4,
-                title: "Mimic Octopus",
-                description: "Tranquil",
-                price: 45000,
-                image: "https://static.wikia.nocookie.net/growagarden/images/0/0a/Mimic_Octopus_Tranquil.png/revision/latest?cb=20250719211941",
+                title: "Chicken Zombie",
+                description: "No Mutation",
+                price: 20000,
+                image: "https://i.imgur.com/pi9yx34.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg"
             },
             {
@@ -458,7 +458,7 @@
                 title: "Queen Bee",
                 description: "Frozen",
                 price: 40000,
-                image: "https://static.wikia.nocookie.net/growagarden/images/4/4f/Queen_Bee_%28Pet%29_Frozen.png/revision/latest?cb=20250713110602",
+                image: "https://i.imgur.com/WRZFNXF.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg"
             },
             {
@@ -466,7 +466,7 @@
                 title: "T-Rex",
                 description: "No Mutation",
                 price: 45000,
-                image: "https://static.wikia.nocookie.net/growagarden/images/f/f8/T-Rex.png/revision/latest?cb=20250705092909",
+                image: "https://i.imgur.com/c4TdUkQ.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg"
             },
             {
@@ -474,7 +474,7 @@
                 title: "Butterfly",
                 description: "No Mutation",
                 price: 60000,
-                image: "https://static.wikia.nocookie.net/growagarden/images/1/18/Thy_Butterfly_V2.png/revision/latest/scale-to-width-down/1000?cb=20250724152106",
+                image: "https://i.imgur.com/ktAMkh1.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg"
             },
             {
@@ -482,7 +482,7 @@
                 title: "Spinosaurus",
                 description: "No Mutation",
                 price: 55000,
-                image: "https://static.wikia.nocookie.net/growagarden/images/2/24/Spinosaurus.png/revision/latest?cb=20250712071322",
+                image: "https://i.imgur.com/0SWYDzj.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg"
             },
             {
@@ -490,7 +490,7 @@
                 title: "Spinosaurus",
                 description: "Rainbow",
                 price: 100000,
-                image: "https://static.wikia.nocookie.net/growagarden/images/d/d4/Spinosaurus_Rainbow.gif/revision/latest?cb=20250714190157",
+                image: "https://i.imgur.com/vM62QmG.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg"
             },
             {
@@ -498,7 +498,7 @@
                 title: "Fennec Fox",
                 description: "No Mutation",
                 price: 60000,
-                image: "https://static.wikia.nocookie.net/growagarden/images/e/e8/FennecFoxIcon.png/revision/latest?cb=20250626225726",
+                image: "https://i.imgur.com/Mn8B35J.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg"
             },
             {
@@ -506,7 +506,7 @@
                 title: "Kitsune",
                 description: "No Mutation",
                 price: 600000,
-                image: "https://static.wikia.nocookie.net/growagarden/images/4/4d/Kitsune_.png/revision/latest?cb=20250719022612",
+                image: "https://i.imgur.com/vcO94XL.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg"
             },
             {
@@ -514,7 +514,7 @@
                 title: "Corrupted Kitsune",
                 description: "No Mutation",
                 price: 800000,
-                image: "https://static.wikia.nocookie.net/growagarden/images/2/2a/CorruptedKitsune.png/revision/latest?cb=20250726085150",
+                image: "https://i.imgur.com/K51uDkG.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg",
                 stock: 2,
             }
