--- a/index.html
+++ b/index.html
@@ -513,8 +513,35 @@
                 id: 12,
                 title: "Corrupted Kitsune",
                 description: "No Mutation",
-                price: 800000,
+                price: 600000,
                 image: "https://i.imgur.com/K51uDkG.jpeg",
+                qris: "https://i.imgur.com/ophvmoJ.jpeg",
+                stock: 2,
+            },
+            {
+                id: 13,
+                title: "Raccoon Gemuk",
+                description: "No Mutation",
+                price: 110000,
+                image: "https://i.imgur.com/h51bGJK.jpeg",
+                qris: "https://i.imgur.com/ophvmoJ.jpeg",
+                stock: 2,
+            },
+            {
+                id: 12,
+                title: "Blood Owl",
+                description: "Random Mutation",
+                price: 20000,
+                image: "https://i.imgur.com/BEf0K3m.jpeg",
+                qris: "https://i.imgur.com/ophvmoJ.jpeg",
+                stock: 2,
+            },
+            {
+                id: 12,
+                title: "Raiju",
+                description: "No Mutation",
+                price: 100000,
+                image: "https://i.imgur.com/iAKVssp.jpeg",
                 qris: "https://i.imgur.com/ophvmoJ.jpeg",
                 stock: 2,
             }
